# kreuzberg

./: .dockerignore  .gh-actions-updater.toml  .gitattributes  .gitignore  .gitmodules  .lychee.toml  .output.txt  .oxlintrc.json  .pre-commit-config.yaml  .rumdl.toml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  BASELINE_IMPLEMENTATION_GUIDE.md  BASELINE_QUICK_REFERENCE.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCBOOK_REVIEW.md  DOCX_COMPARISON_REPORT.md  EPUB_TESTS_DETAILED.md  EPUB_TESTS_INDEX.md  EPUB_TESTS_QUICK_REFERENCE.md  EPUB_TESTS_RESULTS.md  EPUB_TEST_SUMMARY.md  EXTRACTION_MAPPING.md  HTML_TABLE_TESTING_SUMMARY.md  JATS_EXTRACTOR_REVIEW.md  LAYER_2_EXTRACTION_SUMMARY.md  ODT_EXTRACTION_BUG_REPORT.md  PANDOC_BASELINE_REPORT.md  Package.swift  README.md  README_PANDOC_BASELINES.md  TYPST_CODE_SNIPPETS.md  TYPST_EXTRACTOR_REVIEW.md  TYPST_ISSUES_MATRIX.txt  TYPST_REVIEW_INDEX.md  TYPST_REVIEW_SUMMARY.txt  Taskfile.yaml  (+21 more)
.ai-rulez/: .generated-manifest.json  config.toml  config.yaml  custom-rules.yaml  ground-truth-generation.md
.cargo/: config.toml
.github/: cr.yaml  dependabot.yaml
audit-notes/: benchmark-regressions-2026-06-04.md  node.md  swift.md  vlm-A4-baselines-2026-06-17.md
benchmarks/: pyproject.toml
crates/: config.m4
crates/kreuzberg-jni/: Cargo.toml
crates/kreuzberg-jni/src/: lib.rs
crates/kreuzberg-libheif/: Cargo.toml  README.md
crates/kreuzberg-libheif/src/: context.rs  decoder.rs  encoder.rs  errors.rs  lib.rs  metadata.rs  security_limits.rs
crates/kreuzberg-libheif/tests/: decode_smoke.rs
crates/kreuzberg-wasm/: Cargo.toml  README.md  package.json
crates/kreuzberg-wasm/e2e/go/: go.mod
crates/kreuzberg-wasm/e2e/java/: pom.xml
crates/kreuzberg-wasm/src/: embeddings.rs  errors.rs  extraction.rs  lib.rs  plugins.rs  types.rs
crates/kreuzberg-wasm/src/plugins/: mod.rs  ocr_bridge.rs  processor_bridge.rs  validator_bridge.rs
crates/kreuzberg-wasm/typescript/: batch-operations.spec.ts  index.ts  pages.spec.ts  types.ts
crates/kreuzberg-wasm/typescript/adapters/: wasm-adapter.ts
crates/kreuzberg-wasm/typescript/config/: TEST_COVERAGE_MATRIX.md
crates/kreuzberg-wasm/typescript/initialization/: pdfium-loader.ts  wasm-loader.ts
crates/kreuzberg-wasm/typescript/mime/: utilities.ts
crates/xberg-libheif/: Cargo.toml  README.md
crates/xberg-libheif/src/: color_profile.rs  enums.rs  heif.rs  image.rs  image_handle.rs  lib.rs  reader.rs  regions.rs  track.rs  utils.rs
crates/xberg-libheif/src/integration/: image.rs
crates/xberg-libheif/tests/: decode_smoke.rs
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full  Dockerfile.musl-build  Dockerfile.musl-ffi  Dockerfile.musl-node  Dockerfile.musl-rustler  README.md  test-tessdata.sh
docs/: contributing.md  demo.html  ecosystem.md  features.md  index.md  llms.txt
e2e/rust/: Cargo.toml
e2e/rust/.cargo/: config.toml
e2e/rust/e2e/rust/tests/: parity_test.rs
e2e/rust/src/: lib.rs  main.rs
e2e/rust/tests/: archive_test.rs  async_test.rs  batch_test.rs  cache_operations_test.rs  cache_ops_test.rs  chunking_test.rs  code_test.rs  common.rs  configuration_test.rs  contract_test.rs  detection_test.rs  document_extractor_management_test.rs  document_test.rs  email_test.rs  embed_async_pending_test.rs  embed_extra_test.rs  embed_test.rs  embedding_backend_management_test.rs  embeddings_test.rs  error_test.rs  extract_test.rs  extraction_test.rs  format_specific_test.rs  hash_test.rs  html_test.rs  html_tests.rs  image_operations_test.rs  image_ops_test.rs  image_test.rs  keywords_test.rs  language_test.rs  markup_test.rs  mime_utilities_test.rs  mock_server.rs  ocr_backend_management_test.rs  ocr_test.rs  office_test.rs  office_tests.rs  parity_test.rs  parsing_test.rs  (+31 more)
e2e/rust/tests/fixtures/: contract_test.rs
e2e/rust/tools/e2e-generator/: parity-manifest.json
examples/: kreuzberg.json  kreuzberg.toml  kreuzberg.yaml  server.json  server.toml  server.yaml  tsconfig.base.json
fixtures/: schema.json
kreuzberg/: README.md  tsconfig.json
kreuzberg/crates/kreuzberg-node/: Cargo.toml  tsup.config.ts  vitest.config.ts
kreuzberg/crates/kreuzberg-node/e2e/php/tests/: Helpers.php
kreuzberg/crates/kreuzberg-node/npm/linux-arm64-gnu/: package.json
kreuzberg/crates/kreuzberg-node/npm/linux-x64-gnu/: package.json
kreuzberg/crates/kreuzberg-node/npm/win32-arm64-msvc/: package.json
kreuzberg/crates/kreuzberg-node/src/: batch.rs  embedding_presets.rs  extraction.rs  lib.rs  metadata.rs  result.rs  validation.rs  worker_pool_api.rs
kreuzberg/crates/kreuzberg-node/src/config/: types.rs
kreuzberg/crates/kreuzberg-node/src/plugins/: mod.rs  ocr_backend.rs  post_processor.rs  validator.rs
kreuzberg/crates/kreuzberg-node/tests/binding/: binding-conversion.spec.ts  configuration.spec.ts  edge-cases.spec.ts  error-types.spec.ts  ocr-backend.spec.ts  pages.spec.ts  render.spec.ts  worker-pool.spec.ts
kreuzberg/crates/kreuzberg-node/tests/binding/config/: embedding-config.spec.ts  font-config.spec.ts  image-preprocessing-config.spec.ts  output-format.spec.ts
kreuzberg/crates/kreuzberg-node/tests/cli/: cli-server.spec.ts
kreuzberg/crates/kreuzberg-node/tests/helpers/: index.ts  test-utils.ts
kreuzberg/crates/kreuzberg-node/typescript/: errors.ts  types.ts
kreuzberg/crates/kreuzberg-node/typescript/core/: binding.ts  config-normalizer.ts
kreuzberg/crates/kreuzberg-node/typescript/extraction/: render.ts  single.ts
kreuzberg/crates/kreuzberg-node/typescript/ocr/: optional-deps.d.ts
kreuzberg/crates/kreuzberg-node/typescript/plugins/: ocr-backends.ts
kreuzberg/crates/kreuzberg-php/: .gitignore  Cargo.toml  build.sh
kreuzberg/crates/kreuzberg-php/src/: config.rs  embeddings.rs  extraction.rs  lib.rs  plugins.rs  types.rs  validation.rs
scratch/: repro_issue_781.rs
scripts/: README_GENERATOR.md  build_cli_binary.sh  compare_benchmarks.py  install-php-ext.sh  install.sh  package_cli_artifact.sh  readme_config.yaml  run_benchmarks.py  setup-php-ext-ini.sh  setup-swift-bridge.sh  sign_macos_wheels.py  stage_csharp_native_local.sh  sync_versions.py  (+2 more)
(+8277 files in other folders)
