[package]
name = "kreuzberg-jni"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "kreuzberg_jni"

[dependencies]
base64 = "0.22"
# jni 0.22 split JNIEnv into Env + EnvUnowned; migration to with_env(|env| ...) pattern is deferred.
# Pin to 0.21 until kreuzberg-jni is rewritten against the new API.
jni = "0.21"
kreuzberg-ffi = { path = "../kreuzberg-ffi" }

[lints]
workspace = true
