[package]
name = "kreuzberg-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Kreuzberg document intelligence - Node.js native bindings"
keywords = ["nodejs", "napi", "document", "extraction", "bindings"]
categories = ["api-bindings", "text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

bytes = { workspace = true }
ctor = { workspace = true }
html-to-markdown-rs = { workspace = true }
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }
kreuzberg-ffi = { workspace = true }
napi = { version = "3", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "3"
num_cpus = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc-rust = "0.2"

[build-dependencies]
napi-build = "2.3"
